<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/grid_1"
    android:background="?attr/colorSurface"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/grid_1"
    tools:context="com.atech.quizapp.ui.fragment.choose_difficulty.EnterDetailFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="@dimen/grid_1"
        android:text="@string/quiz_time"
        android:textAppearance="?attr/textAppearanceHeadlineLarge" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/grid_0_25"
        android:text="@string/enter_details_des"
        android:textAppearance="?attr/textAppearanceCaption" />

    <ImageView
        android:layout_width="@dimen/image_size"
        android:layout_height="@dimen/image_size"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/grid_1"
        android:contentDescription="@string/blank"
        android:src="@drawable/ic_quiz" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlined_text_field_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        app:boxStrokeColor="@color/mtrl_outlined_stroke_color"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlined_text_field_category"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/grid_1"
        android:hint="@string/categories"
        app:boxStrokeColor="@color/mtrl_outlined_stroke_color">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dropDownHeight="300dp"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlined_text_field_difficulty"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/grid_1"
        android:hint="@string/difficulty"
        app:boxStrokeColor="@color/mtrl_outlined_stroke_color">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_enter"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/grid_1"
        android:padding="@dimen/grid_1"
        android:text="@string/enter" />
</LinearLayout>